[package]
name = "marinade-crank"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27.0"
anchor-lang = "0.27.0"
clap = { version = "4.5.4", features = ["derive"] }
marinade-client-rs = { git = "https://github.com/marinade-finance/marinade-common-rs-cli" }
solana-sdk = "1.14.18"
tokio = "1.37.0"

[[bin]]
name = "marinade-crank"
